# WindowMediaPlayer

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Controller/: ModuleController.cpp  ModuleController.h  ServiceController.cpp  ServiceController.h  WindowController.cpp  WindowController.h
Interface/: Definitions.h  IService.h  IServiceFactory.h  IServiceListener.h
Interface/WindowMediaService/: IWindowMediaService.h  IWindowMediaServiceListener.h  WindowServiceUtils.h
Model/MediaModule/: MediaPlayerModel.cpp  MediaPlayerModel.h
QmlComponent/: BottomMediaPlayer.qml  CustomButton.qml  CustomButtonBackground.qml  CustomButtonContent.qml  MainContent.qml  MediaControl.qml  WindowControl.qml
Service/ServiceFactory/: CMakeLists.txt
Service/ServiceFactory/include/: ServiceFactory.h  WMediaServiceFactory.h
Service/ServiceFactory/src/: ServiceFactory.cpp  WMediaServiceFactory.cpp
Service/WindowMediaService/: CMakeLists.txt
Service/WindowMediaService/include/: WindowMediaService.h  WindowSystemMedia.h
Service/WindowMediaService/src/: WindowMediaService.cpp  WindowSystemMedia.cpp
ServiceHandler/: BaseHandler.h  WindowMediaServiceHandler.cpp  WindowMediaServiceHandler.h
ServiceHandler/ServiceConsumer/: BaseServiceConsumer.h
ServiceHandler/ServiceConsumer/WindowMediaService/: WindowMediaServiceConsumer.cpp  WindowMediaServiceConsumer.h
ServiceHandler/ServiceListener/WindowMediaService/: WindowMediaServiceListener.cpp  WindowMediaServiceListener.h
ServiceHandler/ServiceMessage/: BaseServiceMessage.h  ServiceMessageId.h
ServiceHandler/ServiceMessage/WindowMediaService/: WMediaInfoMessage.cpp  WMediaInfoMessage.h  WPlaybackControlsMessage.cpp  WPlaybackControlsMessage.h  WPlaybackInfoMessage.cpp  WPlaybackInfoMessage.h  WTimelinePropertiesMessage.cpp  WTimelinePropertiesMessage.h
Utils/: ModuleUtility.h  ServiceUtility.h  ThreadGuard.h
